--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,3 +33,7 @@ code {
   justify-content: center;
   align-items: center;
 }
+
+.description {
+  justify-content: center;
+  align-items: center;
