--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,6 +30,6 @@ code {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
 }
